--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   }
 }
