--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.7.3",
+    "pino": "^8.10.0",
+    "pino-pretty": "^9.2.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0"
   }
