Updated Build flow and reduced the docker image size using multi stage build process

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,23 @@
-FROM node:20-alpine
+# ---------- Stage 1: Build ----------
+FROM node:20-slim AS builder
+
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+RUN npm ci
+
 COPY . .
+RUN npm run build
+
+# ---------- Stage 2: Production ----------
+FROM node:20-slim
+
+WORKDIR /app
+
+ENV NODE_ENV=production
+
+COPY --from=builder /app/build ./
+
 EXPOSE 5000
-CMD ["npm", "start"]
+
+CMD ["node", "server.js"]
