--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register src/server.ts",
-    "start": "ts-node -r tsconfig-paths/register src/server.ts"
+    "start": "ts-node -r tsconfig-paths/register src/server.ts",
+    "build": "webpack"
   },
   "author": "Gugan A",
   "license": "ISC",
@@ -23,10 +24,14 @@
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.22",
+    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "webpack": "^5.105.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "apicache": "^1.6.3",
